implement logger middleware, setup cors
